fix overflow

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -10,6 +10,9 @@
     --dark: #000000;
     --light: #FFFFFF;
 }
+html{
+    overflow-x: hidden;
+}
 
 body{
     margin : 0;
